css/styles.css
/* ... */
.products__section .products__bullets {
    display: none;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
    margin-top: var(--spacing-24);
}

.products__bullets .bullets__wrap {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: var(--spacing-8);
}

.products__bullets .bullets__item {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background-color: var(--text-soft-color);
    cursor: pointer;
}

.products__bullets .bullets__item.active {
    background-color: var(--main-color);
}

/* Brands Section */
.brands__section {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    padding: var(--spacing-68) 9%;
    gap: var(--spacing-24);
    min-height: 60vh;
    background-color: var(--secondary-bg-color);
}

.brands__section .brands__heading {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    gap: var(--spacing-10);
}

.brands__heading .brands__title {
    font-size: var(--font-xlarge);
    font-weight: 500;
    color: var(--text-color);
    text-transform: uppercase;
}

.brands__heading .brands__subtitle {
    font-size: var(--font-small);
    font-weight: 400;
    color: var(--text-soft-color);
}

.brands__heading span {
    height: 2px;
    background-color: #910C15;
    width: 93px;
    border-radius: var(--spacing-10);
}

.brands__section .brands__wrap {
    display: flex;
    width: 100%;
}

.brands__wrap .brands__list {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    justify-content: space-between;
    gap: var(--spacing-24);
    width: 100%;
    margin-top: var(--spacing-68);
    overflow: auto;
}

.brands__list .brands__item {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 140px;
    height: 140px;
    background-color: var(--text-soft-color);
    border-radius: 50%;
}

.brands__section .brands__bullets {
    display: none;
    align-items: center;
    justify-content: flex-start;
    width: 100%;
    margin-top: var(--spacing-24);
}

.brands__bullets .bullets__wrap {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: var(--spacing-8);
}

.brands__bullets .item {
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background-color: var(--text-soft-color);
    cursor: pointer;
}

.brands__bullets .item.active {
    background-color: var(--main-color);
}

/* Offers Section */
.offers__section {
    padding-top: var(--spacing-68);
    min-height: 60vh;
    background-color: var(--primary-bg-color);
}

.offers__section .offers__heading {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    justify-content: center;
    gap: var(--spacing-10);
    padding: 0 9% var(--spacing-36) 9%;
}

.offers__heading .offers__title {
    font-size: var(--font-xlarge);
    font-weight: 500;
    color: var(--text-color);
    text-transform: uppercase;
}

.offers__heading .offers__subtitle {
    font-size: var(--font-small);
    font-weight: 400;
    color: var(--text-soft-color);
}

.offers__heading span {
    height: 2px;
    background-color: #910C15;
    width: 93px;
    border-radius: var(--spacing-10);
}

.swiper {
    width: 100%;
    height: 100%;
}

.swiper-pagination {
    text-align: left;
    color: var(--main-color);
    padding-left: 9%;
    margin-bottom: var(--spacing-10);
}

.offers__content {
    position: relative;
}

.offers__content .offers__img img {
    min-height: 280px;
}

.offers__content .offers__text {
    position: absolute;
    top: 16%;
    right: 0;
    width: 50%;
    display: flex;
    flex-direction: column;
    gap: var(--spacing-12);
}

.offers__text .offers__title {
    font-size: 5.2em;
    font-weight: 500;
    color: var(--alternative-text-color);
    text-align: right;
    line-height: 1;
    text-transform: uppercase;
    text-shadow: 0px 3px 6px #0000005C;
    white-space: pre-line;
    margin-right: 18%;
}

.offers__title span {
    font-size: 1.6em;
    font-weight: 500;
    color: var(--alternative-text-color);
    text-align: left;
    text-transform: uppercase;
    text-shadow: 0px 3px 6px #0000005C;
}

.offers__text .offer__wrap {
    display: flex;
    justify-content: flex-end;
    width: 100%;
}

.offer__wrap .offer__link {
    display: flex;
    align-items: center;
    width: 90%;
}

.offer__link .offer__left {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: var(--spacing-12);
    background-color: var(--primary-bg-color);
    height: 100%;
}

.offer__left span {
    color: #000000;
    font-size: var(--font-msmall);
    font-weight: bold;
}

.offer__link .offer__right {
    display: flex;
    align-items: center;
    justify-content: center;
    padding: var(--spacing-10) 18% var(--spacing-10) var(--spacing-20);
    background-color: var(--main-color);
    color: var(--alternative-text-color);
    font-weight: 500;
    width: 100%;
}

.offer__right span {
    font-size: 5.2em;
}

/* About Section */
.about__section {
    display: flex;
    flex-direction: column;
    padding: var(--spacing-68) 9% var(--spacing-12) 9%;
    background-color: var(--secondary-bg-color);
}

.about__section .about__content {
    display: grid;
    grid-template-columns: 1fr 1fr;
    align-items: center;
    justify-content: center;
}

.about__content .about__left {
    display: flex;
    flex-direction: column;
    gap: var(--spacing-12);
    background-color: var(--primary-bg-color);
    width: 100%;
    height: 100%;
    padding: var(--spacing-36) var(--spacing-36) var(--spacing-12) var(--spacing-36);
}

.about__content .about__right {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 100%;
}
/* ... */

